key api google maps added

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
 	</script>
 	<script async defer
-			src="https://maps.googleapis.com/maps/api/js?&signed_in=true&callback=initMap">
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA02Smis7Pbeu-H477-JcNNtaxUyNnYrXQ&signed_in=true&callback=initMap">
 	</script>
 
 
