map z-inedex remove

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 	</main>
 
 	<section>
-		<div id="map" class="map z-index-1"></div>
+		<div id="map" class="map"></div>
 	</section>
 
 	<footer>
@@ -238,11 +238,9 @@
 				title: 'Hello World!'
 			});
 		}
+	</script>
 
-	</script>
-	<script async defer
-			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA02Smis7Pbeu-H477-JcNNtaxUyNnYrXQ&signed_in=true&callback=initMap">
-	</script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjSGuoRX0kWSZyLiKWA4kgUw0PjDw6Ub8&callback=initMap" async defer></script>
 
 
 </body>
